# ereader

./: project_outline.md
ereader_backend/: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  Rust API Server Design.md  docker-compose.yml
ereader_backend/config/: default.toml
ereader_backend/crates/api_client/: Cargo.toml
ereader_backend/crates/api_client/src/: auth.rs  client.rs  error.rs  lib.rs
ereader_backend/crates/api_client/src/models/: book.rs  collection.rs  mod.rs  sync.rs
ereader_backend/crates/api_server/: Cargo.toml
ereader_backend/crates/api_server/src/: error.rs  jwt.rs  lib.rs  main.rs  state.rs
ereader_backend/crates/api_server/src/extractors/: auth.rs  mod.rs
ereader_backend/crates/api_server/src/middleware/: auth.rs  mod.rs
ereader_backend/crates/api_server/src/routes/: IMPLEMENTATION_NOTES.md  admin.rs  assets.rs  auth.rs  collections.rs  covers.rs  health.rs  library.rs  mod.rs  sync.rs
ereader_backend/crates/cli_tool/: Cargo.toml
ereader_backend/crates/cli_tool/src/: main.rs
ereader_backend/crates/common/: Cargo.toml
ereader_backend/crates/common/src/: config.rs  error.rs  lib.rs  types.rs
ereader_backend/crates/db_layer/: Cargo.toml
ereader_backend/crates/db_layer/src/: lib.rs  pool.rs
ereader_backend/crates/db_layer/src/models/: annotation.rs  book.rs  collection.rs  device.rs  mod.rs  reading_state.rs  task.rs  user.rs
ereader_backend/crates/db_layer/src/queries/: annotations.rs  books.rs  collections.rs  covers.rs  devices.rs  file_assets.rs  mod.rs  reading_states.rs  tasks.rs  users.rs
ereader_backend/crates/indexer/: Cargo.toml
ereader_backend/crates/indexer/src/: epub.rs  lib.rs  pdf.rs  traits.rs
ereader_backend/crates/storage_layer/: Cargo.toml
ereader_backend/crates/storage_layer/src/: lib.rs  local.rs  traits.rs
ereader_backend/crates/sync_engine/: Cargo.toml
ereader_backend/crates/sync_engine/src/: lib.rs  merge.rs  types.rs
ereader_backend/crates/worker_daemon/: Cargo.toml
ereader_backend/crates/worker_daemon/src/: lib.rs  main.rs  scheduler.rs
ereader_backend/crates/worker_daemon/src/tasks/: cleanup.rs  covers.rs  mod.rs  reindex.rs
ereader_backend/migrations/: 20240101000000_initial_schema.sql  20250101000001_remove_users_table.sql  20250130000000_merge_file_assets_into_books.sql
ereader_web/: CLAUDE.md  next.config.ts  package.json  plan.md
ereader_web/app/: globals.css  layout.tsx  page.tsx
ereader_web/app/(main)/: layout.tsx
ereader_web/app/(main)/books/[id]/: page.tsx
ereader_web/app/(main)/books/[id]/read/: page.tsx
ereader_web/app/(main)/books/upload/: page.tsx
ereader_web/app/(main)/collections/: page.tsx
ereader_web/app/(main)/collections/[id]/: page.tsx
ereader_web/app/(main)/settings/: page.tsx
ereader_web/app/api/images/: route.ts
ereader_web/components/: providers.tsx
ereader_web/components/books/: add-format-modal.tsx  add-to-collection-modal.tsx  edit-book-modal.tsx
ereader_web/components/collections/: collection-card.tsx  create-collection-modal.tsx  index.ts
ereader_web/components/layout/: header.tsx  mobile-nav.tsx  sidebar.tsx
ereader_web/components/reader/: epub-reader.tsx  index.ts  pdf-reader.tsx  reader-settings.tsx  reader-toolbar.tsx  table-of-contents.tsx
ereader_web/components/ui/: button.tsx  card.tsx  dropdown.tsx  index.ts  input.tsx  modal.tsx  skeleton.tsx
ereader_web/components/upload/: file-dropzone.tsx
ereader_web/lib/api/: books.ts  client.ts  collections.ts  index.ts  sync.ts  types.ts
ereader_web/lib/hooks/: index.ts  use-books.ts  use-collections.ts  use-reading-state.ts
ereader_web/lib/store/: index.ts  library-store.ts  reader-store.ts  ui-store.ts
ereader_web/lib/utils/: format.ts
