[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/db_layer",
    "crates/storage_layer",
    "crates/indexer",
    "crates/sync_engine",
    "crates/api_server",
    "crates/api_client",
    "crates/worker_daemon",
    "crates/cli_tool",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/youruser/ereader-server"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors", "trace", "limit", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }

# Utilities
uuid = { version = "1.19", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
config = "0.15"
dotenvy = "0.15"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Image processing
image = "0.25"

# Ebook processing
epub = "2.1"
lopdf = "0.38"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async utilities
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io"] }

# Testing
tokio-test = "0.4"
