[package]
name = "cli_tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "ereader-cli"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
db_layer = { path = "../db_layer" }
storage_layer = { path = "../storage_layer" }
indexer = { path = "../indexer" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
