[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Web framework (for IntoResponse)
axum = { workspace = true }

# Database (for sqlx types)
sqlx = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# Hashing
sha2 = { workspace = true }
hex = { workspace = true }

# Config
config = { workspace = true }
