[package]
name = "worker_daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
db_layer = { path = "../db_layer" }
storage_layer = { path = "../storage_layer" }
indexer = { path = "../indexer" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
